@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Tentative fix for bug #2028467: confusing changing things it should not.
+ server/spell_util.c: correctly count items.
+Nicolas Weeger 2008-09-19
+
 Fix for bug #2088893: Assertion in cfanim.c globalEventListener on client connect.
 Renamed all globalEventListener to put a plugin-specific prefix.
  plugins/cfanim/include/cfanim_proto.h
